API_CONSULTA-FILMES_2

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo TMDb - João Paulo</title>
+    <title>Catálogo Filmes e Atores - João Paulo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>🎬 Catálogo TMDb</h1>
+        <h1>João Serafim</h1>
+        <p>Consulmo de API para filtro de Filmes e Atores</p>
+        <hr>
+    </div>
+    <div class="container">
+        <h1>🎬 Catálogo </h1>
         <p>Busque atores, explore filmes e veja detalhes completos!</p>
 
         <hr>
